scripts/nullaway/wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Board.java:77: error: [NullAway] dereferenced expression piece is @Nullable
        for (int i = 0; i < piece.getSize(); i++) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:80: error: [NullAway] dereferenced expression currentPiece is @Nullable
        boolean pieceIsLanded = currentPiece.moveDown();
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:147: error: [NullAway] dereferenced expression currentPiece is @Nullable
                currentPiece.rotateIfPossible();
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:153: error: [NullAway] dereferenced expression currentPiece is @Nullable
                currentPiece.moveSideWays(input);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:156: error: [NullAway] dereferenced expression currentPiece is @Nullable
                currentPiece.moveSideWays(input);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:159: error: [NullAway] dereferenced expression currentPiece is @Nullable
                currentPiece.drop();
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/core/Player.java:174: error: [NullAway] dereferenced expression currentPiece is @Nullable
                if (currentPiece.isDropped()) {
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/Highscore.java:34: error: [NullAway] @NonNull static field name not initialized
    static String name, outputfile = "highscore.dat";
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:61: error: [NullAway] initializer method does not guarantee @NonNull fields exitCmd (line 37), newGameCmd (line 37), pauseCmd (line 37), changeLevelCmd (line 37), showHighscoreCmd (line 37), nextLvlCmd (line 37), prevLvlCmd (line 37) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TetrisGameSwing() {
           ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:236: error: [NullAway] dereferenced expression piece is @Nullable
        for (int j = 0; j < piece.getSize(); j++) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:245: error: [NullAway] dereferenced expression piece is @Nullable
        for (int j = 0; j < piece.getSize(); j++) {
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:128: error: [NullAway] dereferenced expression getCurrentPiece() is @Nullable
                        if (getCurrentPiece().getType() == PieceType.I) {
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/OnePieceNoPathCheckPiecePlacer.java:29: error: [NullAway] dereferenced expression currentPiece is @Nullable
        Piece best = currentPiece.getTranslatedCopy(currentPiece.getX(), currentPiece.getY(), 0, board);
                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/OnePieceNoPathCheckPiecePlacer.java:29: error: [NullAway] dereferenced expression currentPiece is @Nullable
        Piece best = currentPiece.getTranslatedCopy(currentPiece.getX(), currentPiece.getY(), 0, board);
                                                                ^
    (see http://t.uber.com/nullaway )
14 errors
